# turboquant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/results/: README.md  gpt2.json  smollm2_135m.json
benchmarks/scripts/: sweep_cpu.py  sweep_llm.py
docs/: CONTRIBUTING.md  benchmarks.md  index.md  pruning.md  quantization.md
examples/: bench_compare.py  prune_resnet.py  quantize_llm_gptq.py  quantize_llm_int4.py
src/turboquant/: __init__.py  cli.py  utils.py
src/turboquant/benchmark/: __init__.py  accuracy.py  compare.py  latency.py  memory.py
src/turboquant/export/: __init__.py  onnx_export.py  tensorrt_export.py
src/turboquant/models/: __init__.py
src/turboquant/pruning/: __init__.py  magnitude.py  nm_sparsity.py  structured.py
src/turboquant/quantization/: __init__.py  awq_int.py  bnb.py  dtype_cast.py  gptq_int.py  int8_dynamic.py  int8_static.py  observers.py
tests/: conftest.py  test_benchmark.py  test_cli.py  test_export.py  test_pruning.py  test_quantization.py
