[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "turboquant"
version = "0.1.0"
description = "Model quantization and optimization toolkit for edge and resource-constrained deployment."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "TurboQuant Contributors" }]
keywords = [
    "quantization",
    "pruning",
    "llm",
    "edge-ai",
    "onnx",
    "tensorrt",
    "gptq",
    "awq",
    "bitsandbytes",
    "model-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2",
    "numpy>=1.24",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.30",
    "rich>=13.7",
    "typer>=0.12",
    "psutil>=5.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
onnx = ["onnx>=1.16", "onnxruntime>=1.18", "onnxslim>=0.1", "onnxscript>=0.1"]
gptq = ["auto-gptq>=0.7.1", "optimum>=1.20"]
awq = ["autoawq>=0.2.5"]
bnb = ["bitsandbytes>=0.43"]
eval = ["lm-eval>=0.4.3", "evaluate>=0.4"]
viz = ["matplotlib>=3.8", "pandas>=2.2"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = [
    "turboquant[onnx,gptq,awq,bnb,eval,viz]",
]

[project.scripts]
turboquant = "turboquant.cli:app"
tq = "turboquant.cli:app"

[project.urls]
Homepage = "https://github.com/Ademo93/turboquant"
Repository = "https://github.com/Ademo93/turboquant"
Issues = "https://github.com/Ademo93/turboquant/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/turboquant"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a GPU",
    "integration: end-to-end integration tests",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
